Fix wishlist filter cut off on mobile

--- a/src/assets/css/default.css
+++ b/src/assets/css/default.css
@@ -465,17 +465,7 @@ body.pushable > .pusher {
 /**
  * Filter
  */
-.ui.basic.white.button {
-    color: inherit;
-    background-color: #fff;
-}
-@media (prefers-color-scheme: dark) {
-    .ui.basic.white.button {
-        background-color: #222;
-    }
-}
-
-.ui.dropdown.filter.priority .ui.menu {
+.ui.dropdown.filter.priority .menu {
     z-index: calc(var(--dimmerZIndex) + 3);
 }
 
